fix icon alignment for notes when calculcator is active

--- a/lms/static/sass/_customer-specific.scss
+++ b/lms/static/sass/_customer-specific.scss
@@ -145,3 +145,14 @@
 .xmodule_display.xmodule_CapaModule div.problem .choicegroup legend {
   max-width: 100%;
 }
+
+
+// notes with calculator active fixes
+.nav-utilities.has-utility-calculator .wrapper-utility.edx-notes-visibility {
+  margin: 1rem 2rem 1rem 0;
+  padding: 0.1rem;
+
+  .action-toggle-message {
+    right: 7rem;
+  }
+}
